# qrterm

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
scripts/: appveyor.ps1
src/: lib.rs  main.rs  payloads.rs
