[package]
name = "qrterm"
version = "0.2.2"
authors = ["Lukas Reuter <lukas@bootsmann-games.de>"]
description = "A simple program to generate and display QR-Codes in the Terminal"
homepage = "https://github.com/Luxxuor/qrterm"
repository = "https://github.com/Luxxuor/qrterm"
keywords = ["qr", "terminal", "tool", "cli"]
license = "mit"

[dependencies]
qrcode = "0.2.*"
rustty = "*"
term = "*"
clap = "*"
image = "0.12.*"
regex = "*"
lazy_static = "*"
urlparse = "*"

[profile.release]
lto = true

[[bin]]
bench = false
path = "src/main.rs"
name = "qr"
