[package]
name = "qrterm"
version = "0.2.2"
authors = ["Lukas Reuter <lukas@bootsmann-games.de>"]
description = "A simple program to generate and display QR-Codes in the Terminal"
homepage = "https://github.com/Luxxuor/qrterm"
repository = "https://github.com/Luxxuor/qrterm"
keywords = ["qr", "terminal", "tool", "cli"]
license = "mit"

[dependencies]
qrcode = "0.2.*"
term = "0.4.*"
clap = "2.*"
image = "0.12.*"
regex = "0.2.*"
lazy_static = "0.2.*"
urlparse = "0.7.*"

[dev-dependencies]
assert_cli = "*"

[profile.release]
lto = true

[[bin]]
bench = false
path = "src/main.rs"
name = "qr"
